<resources>
    <string name="app_name">GMV</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Acceder</string>
    <string name="action_sign_in_short">ACCEDER</string>
    <string name="title_activity_agenda">AgendaActivity</string>
    <string name="title_activity_marcar_registro">MarcarRegistroActivity</string>
    <string name="title_activity_acciones">AccionesActivity</string>
    <string name="title_activity_cobro_in">CobroInActivity</string>
    <string name="title_activity_pedido">PedidoActivity</string>
    <string name="title_activity_articulos">ArticulosActivity</string>
    <string name="title_activity_detalles_articulo">DetallesArticuloActivity</string>
    <string name="title_activity_indicadores_cliente">IndicadoresClienteActivity</string>
    <string name="title_activity_resumen">ResumenActivity</string>
    <string name="title_activity_cumpleanno">CumpleannoActivity</string>
    <string name="title_activity_bandeja_pedidos">BandejaPedidosActivity</string>
    <string name="title_activity_bandeja_cobros">BandejaCobrosActivity</string>
    <string name="title_activity_rpt_hoy">RptHoyActivity</string>
    <string name="resumen_direccion">Km 19 1/2 Caretera Vieja a Tipitapa, Tipitapa 15100</string>
    <string name="resumen_empresa">INNOVA INDUSTRIAS S.A </string>

    <string name="app_label">Buscar</string>
    <string name="search_hint">Buscar</string>
    <string name="search">Buscador</string>
    <string name="action_settings">Buscador</string>
    <string name="resumen_npedido">#PEDIDO</string>
    <string name="atendio">#atendio</string>
    <string name="resumen_name_vendedor">Nombre Vendedor:</string>
    <string name="title_resumen_Descripcion">DESCRIPCION</string>
    <string name="title_resumen_Total">TOTAL</string>

    <string-array name="array_transc">
        <item>EFECTIVO</item>
        <item>CHEQUE</item>
        <item>TRANSFERENCIA</item>
    </string-array>
    <string name="title_activity_facturas">FacturasActivity</string>
    <string name="prompt_user_id">USUARIO</string>
    <string name="info_empry">No hay Informacion que Mostrar</string>

    <string-array name="dias">
        <item>LUNES</item>
        <item>MARTES</item>
        <item>MIERCOLES</item>
        <item>JUEVES</item>
        <item>VIERNES</item>
    </string-array>


    <string name="title_activity_crear_agenda">CrearAgendaActivity</string>
    <string name="title_activity_clientes">ClientesActivity</string>
    <string name="title_activity_compras">ComprasActivity</string>

    <!-- Derechos -->
    <string name="tag_derchos_1">Todos los Derechos Reservados © INNOVA INDUSTRIAS S.A. 2017</string>
    <string name="tag_derchos_2">Desarrollado por Gerencia Corp. IT - (505)2278-8787, Ext.130 - 134</string>
    <string name="tag_derchos_3">www.innovaindustrias.com</string>


    <string name="intro">BIENVENIDO !</string>
    <string name="intro2">GESTOR MOVIL DE VENTA</string>
    <string name="version">v1.2.1</string>
    <string name="copy">INNOVA INDUSTRIAS S.A © 2017 Todos los Derechos Reservados</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_scrolling_razones">ScrollingRazones</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_imv">ImvActivity</string>

</resources>


