<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/content_resumen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.guma.desarrollo.gmv.Activity.ResumenActivity"
    tools:showIn="@layout/activity_resumen">
    <LinearLayout
        android:id="@+id/idViewTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text1"
                android:textColor="@color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/resumen_empresa"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/resumen_direccion"/>
        </android.support.design.widget.TextInputLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


            <TextView
                android:id="@+id/IdPedido"
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/resumen_npedido"/>
        </TableRow>
        <TableRow

            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/NombreVendedor"
                android:gravity="center"
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/atendio"/>
        </TableRow>
        </TableLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/NombreCliente"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:gravity="center"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/idtTitulo"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/title_resumen_Descripcion"
                />
            <TextView
                android:id="@+id/idtTotal"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_height="fill_parent"
                android:layout_width="100dp"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/title_resumen_Total"
                />

        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ListView

                android:id="@+id/ListView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>



</RelativeLayout>
